--- a/styles/style.css
+++ b/styles/style.css
@@ -141,4 +141,90 @@
           align-items: center;
   font-size: 17px;
 }
+
+.section-2 {
+  width: 100%;
+  height: 100vh;
+  padding: 50px 130px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+}
+
+.section-2 .section-2-grid {
+  width: 50%;
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[6];
+      grid-template-columns: repeat(6, 1fr);
+  -ms-grid-rows: (1fr)[8];
+      grid-template-rows: repeat(8, 1fr);
+  gap: 10px;
+}
+
+.section-2 .section-2-grid div {
+  background-position: center;
+  background-size: cover;
+}
+
+.section-2 .section-2-grid .box-1 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 4;
+  grid-row: 1 / 5;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1 / 4;
+  background-image: url("/assets/images/Image 1.svg");
+}
+
+.section-2 .section-2-grid .box-2 {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
+  grid-row: 2 / 5;
+  grid-column: 4 / -1;
+  background-image: url("/assets/images/Image 2 (1).svg");
+}
+
+.section-2 .section-2-grid .box-3 {
+  -ms-grid-row: 5;
+  -ms-grid-row-span: 3;
+  grid-row: 5 / 8;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  background-image: url("/assets/images/Image 3.svg");
+}
+
+.section-2 .section-2-grid .box-4 {
+  grid-row: 5 / -1;
+  grid-column: 3 / -1;
+  background-image: url("/assets/images/Image 4.svg");
+}
+
+.section-2 .section-2-texts h2 {
+  color: #000000;
+  font-weight: bold;
+  font-size: 40px;
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 30px;
+}
+
+.section-2 .section-2-texts b {
+  color: #000000;
+  font-weight: bold;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.section-2 .section-2-texts p {
+  color: #666666;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  margin-top: 20px;
+}
 /*# sourceMappingURL=style.css.map */
