--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,3 +8,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @import "./sections/section-1";
+@import "./sections/section-2";
