--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,3 +9,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @import "./sections/section-1";
 @import "./sections/section-2";
+@import "./sections/section-3";
