--- a/styles/style.css
+++ b/styles/style.css
@@ -227,4 +227,89 @@
   font-size: 14px;
   margin-top: 20px;
 }
+
+.section-3 {
+  width: 100%;
+  height: 100vh;
+  background: #FE724C;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 50px 150px;
+}
+
+.section-3 .section-3-texts {
+  width: 50%;
+  height: 100%;
+}
+
+.section-3 .section-3-texts h1 {
+  font-weight: bold;
+  font-size: 40px;
+  color: #FFFFFF;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.section-3 .section-3-texts .box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 35px;
+  margin-top: 60px;
+}
+
+.section-3 .section-3-texts .box .radius {
+  width: 100px;
+  height: 100px;
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.08);
+          box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.08);
+  border-radius: 50%;
+  position: relative;
+}
+
+.section-3 .section-3-texts .box .radius img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.section-3 .section-3-texts .box .box-text h3 {
+  font-size: 20px;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.section-3 .section-3-texts .box .box-text p {
+  font-size: 16px;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  margin-top: 10px;
+}
+
+.section-3 .img-con-3 {
+  width: 50%;
+  height: 100%;
+  background-image: url("/assets/images/image 3 (2).svg");
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+
+.section-3 .img-con-3 img {
+  width: 55%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
 /*# sourceMappingURL=style.css.map */
