--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,3 +10,4 @@
 @import "./sections/section-1";
 @import "./sections/section-2";
 @import "./sections/section-3";
+@import "./sections/section-4";
