--- a/styles/style.css
+++ b/styles/style.css
@@ -312,4 +312,30 @@
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
+
+.section-4 {
+  width: 100%;
+  height: auto;
+  padding: 50px 100px;
+}
+
+.section-4 h1 {
+  text-align: center;
+  color: #000000;
+  font-weight: bold;
+  font-size: 40px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.section-4 .images-section-4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
 /*# sourceMappingURL=style.css.map */
