--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,3 +11,4 @@
 @import "./sections/section-2";
 @import "./sections/section-3";
 @import "./sections/section-4";
+@import "./sections/section-5";
